# tcc

./: .gitignore  CMakeLists.txt  TCC_banks_test.c  TCC_google_sheets.c  main.c  run.bash  run.bat  test.sh  запуск tcc xcode-macos.rtf
Gsheet/: TCC_google_sheets.h
TCC/: TCC_ASTS.h  TCC_CD.h  TCC_GTR.h  TCC_PIT.h  TCC_PPT.h  TCC_PrIT.h  TCC_SP.h  TCC_STS.h  TCC_UAT.h  TCC_VAT.h  TCC_compute_shader.h  TCC_eco.h  TCC_excise.h  TCC_gift.h  TCC_land.h  TCC_mining.h  TCC_money.h  TCC_pension.h  TCC_social.h  TCC_thr_config.h  TCC_transport.h
TCC/PDF/: CMakeLists.txt  install_libzip.sh  main.c  setup.sh
TCC/PDF/PDFGenerator/: TCC_pdf_common.h  TCC_pdf_document.c  TCC_pdf_document.h  TCC_pdf_fonts.c  TCC_pdf_fonts.h  TCC_pdf_pages.c  TCC_pdf_pages.h
TCC/PDF/pdf_generator/: pdf_generator.c  pdf_generator.h
TCC/PDF/tests/: CMakeLists.txt  TCC_tests.c  TCC_tests.h  example.xlsx  main.c  run_tests.sh  tests.c  tests.h
TCC/bank/: TCC_banks.c  TCC_banks.h  TCC_raiffeisen.c  TCC_raiffeisen.h  TCC_sber.c  TCC_sber.h  TCC_tbank.c  TCC_tbank.h
TCC/core/: TCC_ASTS.c  TCC_CD.c  TCC_GTR.c  TCC_PIT.c  TCC_PPT.c  TCC_PrIT.c  TCC_SP.c  TCC_STS.c  TCC_UAT.c  TCC_VAT.c  TCC_compute_shader.c  TCC_eco.c  TCC_excise.c  TCC_gift.c  TCC_land.c  TCC_mining.c  TCC_money.c  TCC_pension.c  TCC_social.c  TCC_transport.c
TCC/core/Xcode-macOS/: cmake_install.cmake
TCC/core/Xcode-macOS/core/: TCC_PDF_PrintPdfContent.c
TCC/core/Xcode-macOS/exporter-tcc.xcodeproj/project.xcworkspace/xcuserdata/daniilshmoylov.xcuserdatad/: UserInterfaceState.xcuserstate
TCC/core/Xcode-macOS/exporter-tcc.xcodeproj/xcuserdata/daniilshmoylov.xcuserdatad/xcschemes/: xcschememanagement.plist
TCC/core/Xcode-macOS/tools/: TCC_PDF_MakePngImageFromPdf.h
TCC/core/pdf_exporter/: CMakeCache.txt  CMakeLists.txt  TCC_user_User.h  main.c
TCC/core/pdf_exporter/exporter-tcc.xcodeproj/xcuserdata/daniilshmoylov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TCC/core/pdf_exporter/tools/: TCC_PDF_CreatePdfFile.c  TCC_PDF_DisplayPdfPage.h
TCC/excel/: TCC_excel_cell.c  TCC_excel_cell.h  TCC_excel_col.c  TCC_excel_col.h  TCC_excel_file.c  TCC_excel_file.h  TCC_excel_page.c  TCC_excel_page.h  TCC_excel_reader.c  TCC_excel_reader.h  TCC_excel_row.c  TCC_excel_row.h  TCC_excel_writer.c  TCC_excel_writer.h
TCC/infra/: TCC_money_load.c
TCC/utils/: TCC_cpuInfo.h  TCC_error.h  TCC_timer.h
test/: tcc_excel_test.xlsx
